sanger/sites/ucl-covid19-pbmcs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucl-covid19-pbmcs
spec:
  selector:
    matchLabels:
      app: ucl-covid19-pbmcs
  replicas: 2
  template:
    metadata: 
      name: ucl-covid19-pbmcs
      labels:
        app: ucl-covid19-pbmcs
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: ucl-covid19-pbmcs
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/ucl-covid19-pbmcs/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucl-covid19-pbmcs-data
spec:
  selector:
    matchLabels:
      app: ucl-covid19-pbmcs-data
  replicas: 1
  template:
    metadata: 
      name: ucl-covid19-pbmcs-data
      labels:
        app: ucl-covid19-pbmcs-data
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ucl-covid19-pbmcs-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: ucl-covid19-pbmcs-data
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/ucl_covid19_pbmcs.processed.cellxgene.h5ad", "--title", "UCL/Sanger COVID19 CITE-seq on PBMCs", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "12Gi"
            cpu: 2
---
