sanger/sites/ucl-covid19-pbmcs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucl-covid19-pbmcs
  labels:
    app: ucl-covid19-pbmcs
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: ucl-covid19-pbmcs
---
apiVersion: v1
kind: Service
metadata:
  name: ucl-covid19-pbmcs-data
  labels:
    app: ucl-covid19-pbmcs-data
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: ucl-covid19-pbmcs-data
---
